--- a/src/main/resources/templates/adminDashboard/fragments/category.html
+++ b/src/main/resources/templates/adminDashboard/fragments/category.html
@@ -33,8 +33,12 @@
                 </div>
             </div>
 
+            <div th:if="${successMessage}" class="alert alert-success" th:text="${successMessage}"></div>
+            <div th:if="${errorMessage}" class="alert alert-danger" th:text="${errorMessage}"></div>
+
             <!-- Table categories -->
-            <table class="table table-striped table-hover table-bordered" id="categoryTable" th:fragment="categoryTable">
+            <table class="table table-striped table-hover table-bordered" id="categoryTable"
+                th:fragment="categoryTable">
                 <thead>
                     <tr>
                         <th>ID <i class="fa fa-sort"></i></th>
@@ -51,7 +55,7 @@
                                     class="material-icons">&#xE417;</i></a>
                             <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i
                                     class="material-icons">&#xE254;</i></a>
-                            <a href="#" class="delete delete-category" th:data-id="${category.id}"  title="Delete"
+                            <a href="#" class="delete delete-category" th:data-id="${category.id}" title="Delete"
                                 data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                         </td>
                     </tr>
@@ -79,6 +83,7 @@
     <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
+
             <form id="categoryForm" th:action="@{/admin/categories/add}" method="post">
                 <div class="modal-content">
                     <div class="modal-header">
